<resources>
    <string name="app_name">Draydon-FeelsBook</string>
    <string name="love">Love</string>
    <string name="joy">Joy</string>
    <string name="surprise">Surprise</string>
    <string name="anger">Anger</string>
    <string name="fear">Fear</string>
    <string name="record">Record</string>
    <string name="enter_an_optional_comment_100_char_max">Enter an optional comment (100 char. max)</string>
    <string name="yyyy_mm_dd_hh_mm">YYYY/MM/DD/HH/MM</string>
    <string name="comment_optional">Comment (Optional):</string>
    <string name="date">Date</string>
    <string name="enter_an_optional_comment_here">Enter an optional comment here.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="loveimage">loveImage</string>
    <string name="joyimage">joyImage</string>
    <string name="surpriseimage">surpriseImage</string>
    <string name="angerimage">angerImage</string>
    <string name="fearimage">fearImage</string>
    <string name="emptyCount">##</string>

</resources>
