<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/fearCount"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/emptyCount"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/angerCount" />

    <TextView
        android:id="@+id/angerCount"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/emptyCount"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/surpriseCount" />

    <TextView
        android:id="@+id/surpriseCount"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/emptyCount"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/joyCount"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/emptyCount"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/surpriseCount" />

    <ImageView
        android:id="@+id/smallLove"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/loveimage"
        app:layout_constraintBottom_toTopOf="@+id/loveCount"
        app:layout_constraintEnd_toStartOf="@+id/smallJoy"
        app:srcCompat="@drawable/love" />

    <ImageView
        android:id="@+id/smallJoy"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/joyimage"
        app:layout_constraintBottom_toTopOf="@+id/joyCount"
        app:layout_constraintEnd_toStartOf="@+id/smallSurprise"
        app:srcCompat="@drawable/joy" />

    <ImageView
        android:id="@+id/smallSurprise"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/surpriseimage"
        app:layout_constraintBottom_toTopOf="@+id/surpriseCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/surprise" />

    <ImageView
        android:id="@+id/smallAnger"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/angerimage"
        app:layout_constraintBottom_toTopOf="@+id/angerCount"
        app:layout_constraintStart_toEndOf="@+id/smallSurprise"
        app:srcCompat="@drawable/anger" />

    <ImageView
        android:id="@+id/smallFear"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/fearimage"
        app:layout_constraintBottom_toTopOf="@+id/fearCount"
        app:layout_constraintStart_toEndOf="@+id/smallAnger"
        app:srcCompat="@drawable/fear" />

    <TextView
        android:id="@+id/loveCount"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/emptyCount"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joyCount" />

    <ListView
        android:id="@+id/emotionListView"
        android:layout_width="370dp"
        android:layout_height="420dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>